@@ -1,4 +1,4 @@
-MANIFEST for ded, version t19931123
+MANIFEST for ded, version t19931124
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 COPYING                         copyright notice for DED
